--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.562.0",
+    "motion": "^12.26.2",
     "next-themes": "^0.4.6",
     "nitro": "npm:nitro-nightly@latest",
     "react": "^19.2.0",
