--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
+    "hugeicons-react": "^0.3.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.562.0",
     "motion": "^12.26.2",
@@ -72,7 +73,8 @@
     "tw-animate-css": "^1.3.6",
     "vaul": "^1.1.2",
     "vite-tsconfig-paths": "^6.0.2",
-    "zod": "^4.3.5"
+    "zod": "^4.3.5",
+    "zustand": "^5.0.10"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.3.11",
